3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #1555887: Thief player - should have bargaining as default skill
 lib/treasures: add skill to class items.
Ryo 2006-11-26

Fix bug #1539207: "Max speed" attribute does not work
 common/living.c: armor's max_speed should always be taken into account.
 Ryo 2006-11-26
 
include/newclient.h: Grab/merge copy from 2.x head - some code brought
  back from the 2.x head in the build_map.c file is using the MSG_TYPE
  declarations.
MSW 2006-11-19

Fix bug #1599307:
server/shop.c: In pay_from_container() handle non-standard MONEY objects when
   buying items.
Andreas Kirschbaum 2006-11-19

server/rune.c: If skill is NULL in dispel_rune(), just return as server
  will otherwise crash in trap_disarm()
server/spell_util.c: Fix bug in that runes that hold other spells (glyphs,
   firetraps, magic runes, etc) do not find a skill object, and thus
   player doesn't get exp.  Instead, for runes, try to find owner, and
   then the relevant skill object.
MSW 2006-11-18

Fix bug #598649: Building apartments use multiple materials per tile
server/build_map.c: don't redo same floor.
Ryo 2006-11-18

Tentative fix for bug #1519089: item cannot afford in container can be taken from store.
server/shop.c: do a real recursion in can_pay.
Ryo 2006-11-16

include\{treasure.h path.h face.h commands.h win32.h shstr.h timers.h
  config.h funcpoint.h object.h loader.h attack.h race.h newserver.h
  re-cmp.h living.h book.h plugproto.h player.h artifact.h material.h
  plugin.h spellist.h skills.h spells.h recipe.h god.h sounds.h map.h
  tod.h newclient.h}: Clean up anti-double-include mechanisms.
----